<resources>
    <string name="app_name">necoapp4</string>
    <string name="ok" translatable="false">OK</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="hello">Hello</string>
    <string name="avatar">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="first_name" translatable="false">First name</string>
    <string name="second_name" translatable="false">Second name</string>
    <string name="last_name" translatable="false">Last name</string>
    <string name="done" translatable="false">Done</string>
    <string name="exit" translatable="false">Exit</string>

</resources>